Fix the issue with responsiveness on small screens when displaying dashboard, Use grid system instead of tables

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -13,6 +13,9 @@ body {
     overflow: hidden;
   }
 */
+a.btn {
+  margin: auto;
+}
 
 li.nav-item{
    list-style: none;
